--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-.gitattributes def=https://github.com/pythoneda-shared-def/application
+.gitattributes def=https://github.com/pythoneda-shared-pythonlang-def/application artifact=https://github.com/pythoneda-shared-pythonlang-artifact/application
